// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`move-media-to-recycle-bin should handle non-existent media 1`] = `
{
  "content": [
    {
      "text": "{"type":"Error","title":"The content could not be found","status":404,"operationStatus":"NotFound"}",
      "type": "text",
    },
  ],
  "isError": true,
}
`;

exports[`move-media-to-recycle-bin should move a media item to recycle bin 1`] = `
{
  "content": [
    {
      "text": "",
      "type": "text",
    },
  ],
}
`;
